[gd_scene load_steps=32 format=4 uid="uid://dury1mlirwvvf"]

[ext_resource type="Script" path="res://assets/scripts/main.gd" id="1_s5eu2"]
[ext_resource type="Texture2D" uid="uid://dvgpyvl1iee0w" path="res://assets/textures/mainmenu/pattern.png" id="2_ics8c"]
[ext_resource type="Shader" path="res://assets/shaders/pattern.gdshader" id="2_l6i87"]
[ext_resource type="Texture2D" uid="uid://cex04ihbfignq" path="res://assets/textures/mainmenu/start-hover.png" id="2_lx2su"]
[ext_resource type="Script" path="res://assets/scripts/settings.gd" id="2_yqurc"]
[ext_resource type="Texture2D" uid="uid://kfgl2afnixl2" path="res://assets/textures/mainmenu/start.png" id="3_f0c7u"]
[ext_resource type="Script" path="res://assets/scripts/pattern.gd" id="3_raixm"]
[ext_resource type="Texture2D" uid="uid://b3fe3f7cmkd3n" path="res://assets/textures/mainmenu/settings-hover.png" id="4_4lu5f"]
[ext_resource type="Texture2D" uid="uid://vluit450grbk" path="res://assets/textures/mainmenu/Untitled.png" id="5_uioci"]
[ext_resource type="Texture2D" uid="uid://b2x7ui838omof" path="res://assets/textures/mainmenu/settings.png" id="5_xthq2"]
[ext_resource type="Texture2D" uid="uid://csyufuysqrq2g" path="res://assets/textures/mainmenu/exit-hover.png" id="6_fa57k"]
[ext_resource type="Texture2D" uid="uid://f7kra82ucmyi" path="res://assets/textures/mainmenu/logo.png" id="6_xyayv"]
[ext_resource type="Texture2D" uid="uid://03er1bu31fcq" path="res://assets/textures/mainmenu/exit.png" id="7_2w2o6"]
[ext_resource type="Texture2D" uid="uid://ce5hr7o4nob7t" path="res://assets/RetroWindowsGUI/Windows_Button_Inactive.png" id="7_7wfel"]
[ext_resource type="Texture2D" uid="uid://dsvuokwg2qf3c" path="res://assets/RetroWindowsGUI/Windows_Icons.png" id="11_w2n5w"]
[ext_resource type="Texture2D" uid="uid://bjx1movyuj3iy" path="res://assets/RetroWindowsGUI/Windows_Ratio_Inactive.png" id="16_erlyu"]
[ext_resource type="Texture2D" uid="uid://5j1axrlusi6b" path="res://assets/RetroWindowsGUI/Windows_Ratio_Selected.png" id="17_3snju"]
[ext_resource type="Texture2D" uid="uid://cdy46uufs0xfv" path="res://assets/RetroWindowsGUI/Windows_Slider_Background.png" id="19_6cao4"]
[ext_resource type="Texture2D" uid="uid://c0rcl8brbvybp" path="res://assets/RetroWindowsGUI/Window_Header_Resizable_Inactive.png" id="28_cakk3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p2arw"]
shader = ExtResource("2_l6i87")
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="CanvasTexture" id="CanvasTexture_6xpw2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6ecjm"]
texture = ExtResource("2_lx2su")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2vkn5"]
texture = ExtResource("3_f0c7u")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a50a3"]
texture = ExtResource("4_4lu5f")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_70i7t"]
texture = ExtResource("5_xthq2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_573u2"]
texture = ExtResource("6_fa57k")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0b0ba"]
texture = ExtResource("7_2w2o6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wfphn"]
texture = ExtResource("7_7wfel")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6kkck"]
texture = ExtResource("11_w2n5w")
texture_region_size = Vector2i(2, 2)
19:1/0 = 0
20:1/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
42:2/0 = 0
43:2/0 = 0
44:2/0 = 0
45:2/0 = 0
46:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
11:3/0 = 0
12:3/0 = 0
19:3/0 = 0
20:3/0 = 0
27:3/0 = 0
28:3/0 = 0
36:3/0 = 0
37:3/0 = 0
42:3/0 = 0
46:3/0 = 0
3:4/0 = 0
4:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
19:4/0 = 0
20:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
34:4/0 = 0
35:4/0 = 0
36:4/0 = 0
42:4/0 = 0
46:4/0 = 0
19:5/0 = 0
20:5/0 = 0
26:5/0 = 0
29:5/0 = 0
35:5/0 = 0
42:5/0 = 0
43:5/0 = 0
44:5/0 = 0
45:5/0 = 0
46:5/0 = 0
50:5/0 = 0
51:5/0 = 0
52:5/0 = 0
53:5/0 = 0
13:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ivxtu"]
texture = ExtResource("19_6cao4")
texture_region_size = Vector2i(2, 2)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0

[sub_resource type="TileSet" id="TileSet_8s24j"]
tile_size = Vector2i(2, 2)
sources/0 = SubResource("TileSetAtlasSource_6kkck")
sources/1 = SubResource("TileSetAtlasSource_ivxtu")

[node name="main" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_s5eu2")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_p2arw")
position = Vector2(317, 179)
texture = ExtResource("2_ics8c")
region_enabled = true
region_rect = Rect2(0, 0, 640, 360)
script = ExtResource("3_raixm")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0.286275)
layout_mode = 0
offset_left = -3.0
offset_right = 640.0
offset_bottom = 359.0
texture = SubResource("CanvasTexture_6xpw2")

[node name="guy" type="Sprite2D" parent="."]
position = Vector2(387, 221)
texture = ExtResource("5_uioci")

[node name="logo" type="Sprite2D" parent="."]
position = Vector2(508, 253)
texture = ExtResource("6_xyayv")

[node name="first" type="MarginContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -307.0
offset_top = -179.0
offset_right = -433.0
offset_bottom = -219.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.66285, 1.66285)
theme_override_constants/margin_left = 205
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 190

[node name="VBoxContainer" type="VBoxContainer" parent="first"]
z_index = 1
layout_mode = 2
theme_override_constants/separation = 10

[node name="start" type="Button" parent="first/VBoxContainer"]
z_index = 1
texture_filter = 1
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 27
theme_override_styles/hover = SubResource("StyleBoxTexture_6ecjm")
theme_override_styles/normal = SubResource("StyleBoxTexture_2vkn5")

[node name="options" type="Button" parent="first/VBoxContainer"]
z_index = 1
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 27
theme_override_styles/hover = SubResource("StyleBoxTexture_a50a3")
theme_override_styles/normal = SubResource("StyleBoxTexture_70i7t")

[node name="quit" type="Button" parent="first/VBoxContainer"]
z_index = 1
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 27
theme_override_styles/hover = SubResource("StyleBoxTexture_573u2")
theme_override_styles/normal = SubResource("StyleBoxTexture_0b0ba")

[node name="settings" type="Panel" parent="."]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_yqurc")

[node name="image" type="MarginContainer" parent="settings"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 80

[node name="TextureRect" type="TextureRect" parent="settings/image"]
z_index = 1
layout_mode = 2
texture = ExtResource("28_cakk3")

[node name="points" type="MarginContainer" parent="settings/image/TextureRect"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 45

[node name="ScrollContainer" type="ScrollContainer" parent="settings/image/TextureRect/points"]
z_index = 1
layout_mode = 2
vertical_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="settings/image/TextureRect/points/ScrollContainer"]
z_index = 1
layout_mode = 2
theme_override_constants/h_separation = 28
theme_override_constants/v_separation = 10
columns = 2

[node name="resolutionText" type="Label" parent="settings/image/TextureRect/points/ScrollContainer/GridContainer"]
z_index = 1
layout_mode = 2
theme_override_font_sizes/font_size = 27
text = "Resolution"

[node name="resolution" type="OptionButton" parent="settings/image/TextureRect/points/ScrollContainer/GridContainer"]
z_index = 1
texture_filter = 1
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "error"
popup/item_1/text = "1366×768"
popup/item_1/id = 1
popup/item_2/text = "1920×1080"
popup/item_2/id = 2
popup/item_3/text = "2560×1440"
popup/item_3/id = 3

[node name="Label" type="Label" parent="settings/image/TextureRect/points/ScrollContainer/GridContainer"]
z_index = 1
layout_mode = 2
theme_override_font_sizes/font_size = 27
text = "Fullscreen"

[node name="CheckButton" type="CheckButton" parent="settings/image/TextureRect/points/ScrollContainer/GridContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 0
theme_override_icons/checked = ExtResource("17_3snju")
theme_override_icons/unchecked = ExtResource("16_erlyu")

[node name="close" type="Button" parent="settings/image/TextureRect"]
z_index = 2
texture_filter = 1
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
offset_left = 205.605
offset_top = 203.975
offset_right = 275.605
offset_bottom = 273.975
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/normal = SubResource("StyleBoxTexture_wfphn")

[node name="TileMapLayer" type="TileMapLayer" parent="settings/image/TextureRect"]
z_index = 6
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAcABwAAAAaAAIAAAAcAB4AAAAaAAQAAAAcAB8AAAAaAAUAAAAdABwAAAAbAAIAAAAdAB0AAAAbAAMAAAAdAB4AAAAbAAQAAAAeABwAAAAcAAIAAAAeAB0AAAAcAAMAAAAeAB4AAAAcAAQAAAAfABwAAAAdAAIAAAAfAB4AAAAdAAQAAAAfAB8AAAAdAAUAAAAEABUAAQAAAAAAAAAEABYAAQAAAAEAAAAFABUAAQACAAAAAAAFABYAAQACAAEAAAAGABUAAQADAAAAAAAGABYAAQADAAEAAAAHABUAAQAEAAAAAAAHABYAAQAEAAEAAAAIABUAAQABAAAAAAAIABYAAQABAAEAAAAJABUAAQACAAAAAAAJABYAAQACAAEAAAAKABUAAQADAAAAAAAKABYAAQADAAEAAAALABUAAQAEAAAAAAALABYAAQAEAAEAAAAMABUAAQABAAAAAAAMABYAAQABAAEAAAANABUAAQACAAAAAAANABYAAQACAAEAAAAOABUAAQADAAAAAAAOABYAAQADAAEAAAAPABUAAQAEAAAAAAAPABYAAQAEAAEAAAAQABUAAQABAAAAAAAQABYAAQABAAEAAAARABUAAQACAAAAAAARABYAAQACAAEAAAASABUAAQADAAAAAAASABYAAQADAAEAAAATABUAAQAEAAAAAAATABYAAQAEAAEAAAAUABUAAQABAAAAAAAUABYAAQABAAEAAAAVABUAAQACAAAAAAAVABYAAQACAAEAAAAWABUAAQADAAAAAAAWABYAAQADAAEAAAAXABUAAQAEAAAAAAAXABYAAQAEAAEAAAAYABUAAQABAAAAAAAYABYAAQABAAEAAAAZABUAAQACAAAAAAAZABYAAQACAAEAAAAaABUAAQADAAAAAAAaABYAAQADAAEAAAAbABUAAQAEAAAAAAAbABYAAQAEAAEAAAAcABUAAQABAAAAAAAcABYAAQABAAEAAAAdABUAAQACAAAAAAAdABYAAQACAAEAAAAeABUAAQADAAAAAAAeABYAAQADAAEAAAAfABUAAQAEAAAAAAAfABYAAQAEAAEAAAAgABUAAQABAAAAAAAgABYAAQABAAEAAAAhABUAAQACAAAAAAAhABYAAQACAAEAAAAiABUAAQADAAAAAAAiABYAAQADAAEAAAAjABUAAQAEAAAAAAAjABYAAQAEAAEAAAAkABUAAQABAAAAAAAkABYAAQABAAEAAAAlABUAAQACAAAAAAAlABYAAQACAAEAAAAmABUAAQADAAAAAAAmABYAAQADAAEAAAAnABUAAQAEAAAAAAAnABYAAQAEAAEAAAAoABUAAQABAAAAAAAoABYAAQABAAEAAAApABUAAQACAAAAAAApABYAAQACAAEAAAAqABUAAQADAAAAAAAqABYAAQADAAEAAAArABUAAQAEAAAAAAArABYAAQAEAAEAAAAsABUAAQABAAAAAAAsABYAAQABAAEAAAAtABUAAQACAAAAAAAtABYAAQACAAEAAAAuABUAAQADAAAAAAAuABYAAQADAAEAAAAvABUAAQAEAAAAAAAvABYAAQAEAAEAAAAwABUAAQABAAAAAAAwABYAAQABAAEAAAAxABUAAQACAAAAAAAxABYAAQACAAEAAAAyABUAAQADAAAAAAAyABYAAQADAAEAAAAzABUAAQAEAAAAAAAzABYAAQAEAAEAAAA0ABUAAQABAAAAAAA0ABYAAQABAAEAAAA1ABUAAQACAAAAAAA1ABYAAQACAAEAAAA2ABUAAQADAAAAAAA2ABYAAQADAAEAAAA3ABUAAQAFAAAAAAA3ABYAAQAFAAEAAAA=")
tile_set = SubResource("TileSet_8s24j")

[connection signal="pressed" from="first/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="first/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="first/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="item_selected" from="settings/image/TextureRect/points/ScrollContainer/GridContainer/resolution" to="settings" method="_on_resolution_item_selected"]
[connection signal="toggled" from="settings/image/TextureRect/points/ScrollContainer/GridContainer/CheckButton" to="settings" method="_on_check_button_toggled"]
[connection signal="pressed" from="settings/image/TextureRect/close" to="settings" method="_on_close_pressed"]
